@@ -1,3 +1,12 @@
+2011-01-10  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Oliver Hunt.
+
+        Removed dead number allocation code.
+        https://bugs.webkit.org/show_bug.cgi?id=52177
+
+        * runtime/Heap.h:
+
 2011-01-10  Daniel Bates  <dbates@rim.com>
 
         Reviewed by Darin Adler.
